--- a/style.css
+++ b/style.css
@@ -11,16 +11,20 @@
 
 #form-wrapper {
   display: none;
-  border: 2px solid #000;
-  width: 250px;
-  margin-left: 20px;
-  padding: 10px 40px;
+  width: 1080px;
+  height: 500px;
+  margin: 0 auto;
+  /* padding: 10px 40px;
+  padding-bottom: 100px; */
+  box-shadow: 3px 3px 0.4em gray, 3px 3px 0.4em gray;
 }
 
 form {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  width: 70%;
+  padding: 0 auto;
 }
 
 .input-wrapper {
